API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

14-Apr-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added EntryAttribute support to SWIG bindings (from mreimer)

29-Mar-2006	Joachim Ansorg <jansorg@crosswire.org>
	Fixed lucene code to work with 0.9.x (tested with 0.9.10)

31-Jan-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added support for OSIS variants
	Added .NET support and update to swig bindings (from lefticus)

28-Nov-2005	Troy A. Griffitts <scribe@crosswire.org>
	Fixed ICUStringMgr toUpper method

19-Nov-2005	Troy A. Griffitts <scribe@crosswire.org>
	Cleaned up headers to remove unnecessary includes

26-Oct-2005	Martin Gruner <mgruner@crosswire.org>
	Added Arabic locale (from Mina Magdy).

17-Oct-2005	Joachim Ansorg <jansorg@crosswire.org>
	Fixed the dutch locale file

21-Sep-2005	Martin Gruner <mgruner@crosswire.org>
	Added Hebrew locale for both Tanach (OT) and 
	Berit Chadashah (NT).

* Release 1.5.8 *

27-May-2005	Troy A. Griffitts <scribe@crosswire.org>
	Clean up and package for 1.5.8

16-May-2005	Troy A. Griffitts <scribe@crosswire.org>
	Changed Strongs to Lemma and added LemmaClass for
		EntryAttributes
	Made OSIS, GBF, and ThML filters parse lemma and
		morph

2-May-2005	Troy A. Griffitts <scribe@crosswire.org>
	Removed many tools files and added them to
		the sword-tools repository
	Removed the need for many #if's throughout the code
	Added seek, read, write, O_*, S_* to filemgr.cpp

11-Apr-2005	Troy A. Griffitts <scribe@crosswire.org>
	Cleaned up unused files in preparation for release
	Updated pkg-config to report proper required libs

1-Jan-2005	Troy A. Griffitts <scribe@crosswire.org>
	Extended InstallMgr routines to recurse directories
	Cleaned up InstallMgr code
	Created FTPTransport base class used by InstallMgr
		to allow for any FTP routines to be plugged
		into InstallMgr by overriding a new
		createFTPTransport method to return subclass
		(Joachim's good idea)